--- a/historical.ipynb
+++ b/historical.ipynb
@@ -865,7 +865,7 @@
     "\n",
     "# use np to save latex table with & separator\n",
     "rows = results_df.values.tolist()\n",
-    "hline_idxs = [2, 2 + len(chemistry_keys), -4, -4, -1]\n",
+    "hline_idxs = [5, 5 + len(chemistry_keys), -4, -4, -1]\n",
     "for i in hline_idxs:\n",
     "    rows[i][0] = r\"\\hline \" + rows[i][0]\n",
     "print(rows)\n",
@@ -1274,7 +1274,7 @@
     "    \"binom-corr\",\n",
     "    # 'birge-forecast'\n",
     "    # 'flip',\n",
-    "    \"lp\",\n",
+    "    # \"lp\",\n",
     "]\n",
     "ns = np.arange(2, 11)\n",
     "result_shape = (len(ns), len(methods), len(particle_keys), n_combs)\n",
@@ -1412,9 +1412,9 @@
     "            # intervals['flip'], _ = flip_interval(value_s, coverage=target_cov, max_iter=100, boot=False)\n",
     "            intervals[\"fe\"], _, _ = fixed_effect(value_s, sigma_s, coverage=target_cov)\n",
     "\n",
-    "            intervals[\"lp\"], _ = linear_pool(\n",
-    "                value_s, sigma_s, coverage=target_cov, gridn=1000\n",
-    "            )\n",
+    "            # intervals[\"lp\"], _ = linear_pool(\n",
+    "            #    value_s, sigma_s, coverage=target_cov, gridn=1000\n",
+    "            # )\n",
     "\n",
     "            for l, method in enumerate(methods):\n",
     "                if method not in intervals:\n",
@@ -1847,61 +1847,139 @@
    "source": [
     "fig, axs = plt.subplots(2, 1, figsize=(8, 5.6), sharex=True, gridspec_kw={\"hspace\": 0})\n",
     "\n",
-    "for i, result in enumerate([method_covs, method_widths_rel_fe]):\n",
-    "    axs[i].plot(\n",
-    "        ns,\n",
-    "        np.nanmean(result[:, methods.index(\"binom\"), :], axis=1),\n",
-    "        label=\"ST\",\n",
-    "        color=\"black\",\n",
-    "        linewidth=3,\n",
-    "    )\n",
-    "    axs[i].plot(\n",
-    "        ns,\n",
-    "        np.nanmean(result[:, methods.index(\"binom-corr\"), :], axis=1),\n",
-    "        label=r\"ST$_{\\rho=0.1}$\",\n",
-    "        color=\"dimgrey\",\n",
-    "        linewidth=2,\n",
-    "    )\n",
-    "    axs[i].plot(\n",
-    "        ns,\n",
-    "        np.nanmean(result[:, methods.index(\"signrank\"), :], axis=1),\n",
-    "        label=r\"SRT\",\n",
-    "        color=\"silver\",\n",
-    "        linewidth=3,\n",
-    "    )\n",
-    "axs[0].plot(\n",
-    "    binom_target_covs.keys(),\n",
-    "    binom_target_covs.values(),\n",
-    "    color=\"black\",\n",
-    "    linestyle=\"--\",\n",
-    "    linewidth=1.5,\n",
-    ")\n",
-    "axs[0].plot(\n",
-    "    binom_corr_target_covs.keys(),\n",
-    "    binom_corr_target_covs.values(),\n",
-    "    color=\"dimgrey\",\n",
-    "    linestyle=\"--\",\n",
-    "    linewidth=1.5,\n",
-    ")\n",
-    "axs[0].plot(\n",
-    "    signrank_target_covs.keys(),\n",
-    "    signrank_target_covs.values(),\n",
-    "    color=\"silver\",\n",
-    "    linestyle=\"--\",\n",
-    "    linewidth=1.5,\n",
-    ")\n",
+    "nonparam_target_covs = {\n",
+    "    'binom': binom_target_covs,\n",
+    "    'binom-corr': binom_corr_target_covs,\n",
+    "    'signrank': signrank_target_covs,\n",
+    "}\n",
+    "colors = {\n",
+    "    'binom': 'black',\n",
+    "    'binom-corr': 'red',\n",
+    "    'signrank': 'silver',\n",
+    "}\n",
+    "labels = {\n",
+    "    'binom': 'ST',\n",
+    "    'binom-corr': r\"ST$_{\\rho=0.1}$\",\n",
+    "    'signrank': r\"SRT\",\n",
+    "}\n",
+    "linewidths = defaultdict(lambda: 3)\n",
+    "linewidths['binom-corr'] = 1.5\n",
     "\n",
     "axs[0].set_ylabel(\"Coverage\")\n",
     "axs[1].set_ylabel(\"Width relative to FE\")\n",
     "plt.xlabel(\"Number of results $n$\")\n",
     "\n",
     "# plt.plot(target_covs.keys(), target_covs.values(), label='target', color='black', linestyle='--', linewidth=2)\n",
-    "print(binom_corr_target_covs[3])\n",
+    "# print(binom_corr_target_covs[3])\n",
     "plt.xlim(3, 10)\n",
-    "plt.legend(frameon=False)\n",
-    "plt.tick_params(direction=\"in\", top=True, right=True)\n",
+    "axs[1].set_ylim(1.5, 4.2)\n",
+    "axs[0].tick_params(direction=\"in\", top=True, right=True)\n",
+    "axs[1].tick_params(direction=\"in\", top=True, right=True)\n",
+    "for method in ['binom', 'signrank', 'binom-corr']:\n",
+    "    for i, result in enumerate([method_covs, method_widths_rel_fe]):\n",
+    "        axs[i].plot(\n",
+    "            ns,\n",
+    "            np.nanmean(result[:, methods.index(method), :], axis=1),\n",
+    "            label=labels[method],\n",
+    "            color=colors[method],\n",
+    "            linewidth=linewidths[method],\n",
+    "        )\n",
+    "    axs[0].plot(\n",
+    "        nonparam_target_covs[method].keys(),\n",
+    "        nonparam_target_covs[method].values(),\n",
+    "        color=colors[method],\n",
+    "        linestyle=\"--\",\n",
+    "        linewidth=1.5,\n",
+    "    )\n",
+    "    plt.legend(frameon=False)\n",
+    "    if method == 'signrank':\n",
+    "        plt.savefig(\"figs/pdg1970_cov_nonparam_less.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "\n",
     "plt.savefig(\"figs/pdg1970_cov_nonparam.pdf\", bbox_inches=\"tight\")\n",
     "plt.savefig(\"figs/pdg1970_cov_nonparam.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(2, 1, figsize=(8, 5.6), sharex=True, gridspec_kw={\"hspace\": 0})\n",
+    "\n",
+    "nonparam_target_covs = {\n",
+    "    'binom': binom_target_covs,\n",
+    "    'binom-corr': binom_corr_target_covs,\n",
+    "    'signrank': signrank_target_covs,\n",
+    "}\n",
+    "colors = {\n",
+    "    're_pm': 'blue',\n",
+    "    'pdg': 'green',\n",
+    "    'fe': 'grey',\n",
+    "    'binom': 'black',\n",
+    "    'binom-corr': 'red',\n",
+    "    'signrank': 'red',\n",
+    "}\n",
+    "labels = {\n",
+    "    'binom': 'ST',\n",
+    "    'binom-corr': r\"ST$_{\\rho=0.1}$\",\n",
+    "    'signrank': r\"SRT\",\n",
+    "    're_pm': r\"Random Effects (PM)\",\n",
+    "    'pdg': r\"Birge (PDG)\",\n",
+    "    'fe': r\"Fixed Effect\",\n",
+    "}\n",
+    "linewidths = defaultdict(lambda: 3)\n",
+    "linewidths['binom-corr'] = 1.5\n",
+    "\n",
+    "axs[0].set_ylabel(\"Coverage\")\n",
+    "axs[1].set_ylabel(\"Coverage\")\n",
+    "plt.xlabel(\"Number $n$ of studies in meta-analysis\")\n",
+    "\n",
+    "# plt.plot(target_covs.keys(), target_covs.values(), label='target', color='black', linestyle='--', linewidth=2)\n",
+    "# print(binom_corr_target_covs[3])\n",
+    "plt.xlim(2, 10)\n",
+    "# axs[1].set_ylim(1.5, 4.2)\n",
+    "for ax in axs:\n",
+    "    ax.tick_params(direction=\"in\", top=True, right=True)\n",
+    "    ax.set_ylim(0.3, 0.95)\n",
+    "which_ax = {\n",
+    "    'fe': 0,\n",
+    "    're_pm': 0,\n",
+    "    'pdg': 0,\n",
+    "    'binom': 1,\n",
+    "    'signrank': 1,\n",
+    "    'binom-corr': 1,\n",
+    "}\n",
+    "axs[0].axhline(0.6827, color='black', linestyle='--', linewidth=1.5)\n",
+    "# axs[0].text(\n",
+    "#     7.5,\n",
+    "#     0.6827+0.01,\n",
+    "#     r\"Target coverage\",\n",
+    "#     va=\"bottom\",\n",
+    "#     ha=\"center\",\n",
+    "# )\n",
+    "for method in ['fe', 're_pm', 'pdg', 'binom', 'signrank']:\n",
+    "    ax = axs[which_ax[method]]\n",
+    "    ax.plot(ns, np.nanmean(method_covs[:, methods.index(method), :], axis=1),\n",
+    "            label=labels[method],\n",
+    "            color=colors[method],\n",
+    "            linewidth=linewidths[method],\n",
+    "        )\n",
+    "    if method in ['binom', 'signrank', 'binom-corr']:\n",
+    "        ax.plot(\n",
+    "            nonparam_target_covs[method].keys(),\n",
+    "            nonparam_target_covs[method].values(),\n",
+    "            color=colors[method],\n",
+    "            linestyle=\"--\",\n",
+    "            linewidth=1.5,\n",
+    "        )\n",
+    "\n",
+    "axs[0].legend(frameon=False, loc='upper left')\n",
+    "axs[1].legend(frameon=False, loc='lower left')\n",
+    "\n",
+    "# plt.savefig(\"figs/pdg1970_cov_nonparam.pdf\", bbox_inches=\"tight\")\n",
+    "plt.savefig(\"figs/pdg1970_cov_poster.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
