--- a/noground.ipynb
+++ b/noground.ipynb
@@ -6,12 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pdg\n",
+    "# import pdg\n",
     "import pandas as pd\n",
-    "import sqlite3\n",
+    "# import sqlite3\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
+    "from pdg_data import load_pdg_data\n",
+    "from measurement_dist import measurement_dist\n",
+    "\n",
     "\n",
     "# point matplotlib ticks inwards\n",
     "plt.rcParams[\"xtick.direction\"] = \"in\"\n",
@@ -36,24 +39,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api = pdg.connect(\"sqlite:///data/pdgall-2025-v0.2.0.sqlite\")\n",
-    "\n",
-    "con = sqlite3.connect(\"data/pdgall-2025-v0.2.0.sqlite\")\n",
-    "cur = con.cursor()\n",
-    "command = \"\"\"\n",
-    "SELECT pdgid.description, pdgmeasurement.pdgid, pdgdata.value_type, pdgdata.in_summary_table, pdgdata.value, pdgmeasurement_values.value, pdgmeasurement_values.error_positive, pdgmeasurement_values.error_negative, pdgmeasurement_values.stat_error_positive, pdgmeasurement_values.stat_error_negative\n",
-    "FROM pdgmeasurement_values\n",
-    "     JOIN pdgmeasurement ON pdgmeasurement.id = pdgmeasurement_values.pdgmeasurement_id\n",
-    "     JOIN pdgid ON pdgid.id = pdgmeasurement.pdgid_id\n",
-    "     JOIN pdgdata ON pdgdata.pdgid_id = pdgid.id\n",
-    "--     JOIN pdgparticle ON pdgparticle.pdgid = pdgid.parent_pdgid\n",
-    "WHERE pdgmeasurement_values.used_in_average AND pdgmeasurement_values.value IS NOT NULL AND pdgdata.edition = '2025' AND pdgdata.value_type = 'AC'\n",
-    "\"\"\"\n",
-    "res = cur.execute(command)\n",
-    "data = res.fetchall()  # WHERE\n",
-    "columns = [col[0] for col in res.description]\n",
-    "print(len(data), \"measurements\")\n",
-    "print(columns)"
+    "pdg2025_stat_dfs, pdg2025_both_dfs, pdg2025_stat_quantities, pdg2025_both_quantities = load_pdg_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter([len(df) for df in pdg2025_both_dfs], [np.max(df.uncertainty)/np.min(df.uncertainty) for df in pdg2025_both_dfs], color='black', alpha=0.2)\n",
+    "n_grid = np.arange(2, 30)\n",
+    "maxovermins_exp = []\n",
+    "maxovermins_pdg = []\n",
+    "for n in n_grid:\n",
+    "    sigmas = np.random.exponential(0.2, size=(1000,n))\n",
+    "    maxovermins_exp.append(np.median(np.max(sigmas, axis=1)/np.min(sigmas, axis=1)))\n",
+    "    maxovermins_pdg.append(np.median([np.max(df.uncertainty)/np.min(df.uncertainty) for df in pdg2025_both_dfs if len(df)==n]))\n",
+    "plt.plot(n_grid, maxovermins_exp, color='red')\n",
+    "plt.plot(n_grid, maxovermins_pdg, color='blue')\n",
+    "plt.yscale('log')"
    ]
   },
   {
@@ -62,144 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(\n",
-    "    data,\n",
-    "    columns=[\n",
-    "        \"pdgid.description\",\n",
-    "        \"pdgid\",\n",
-    "        \"type\",\n",
-    "        \"insummary\",\n",
-    "        \"avg\",\n",
-    "        \"measurement\",\n",
-    "        \"error_positive\",\n",
-    "        \"error_negative\",\n",
-    "        \"stat_error_positive\",\n",
-    "        \"stat_error_negative\",\n",
-    "    ],\n",
-    ")\n",
-    "df[\"error\"] = (df[\"error_positive\"] + df[\"error_negative\"]) / 2\n",
-    "df[\"staterr\"] = (df[\"stat_error_positive\"] + df[\"stat_error_negative\"]) / 2\n",
-    "# replace NaN staterr with total error\n",
-    "staterr = np.array(df[\"staterr\"])\n",
-    "staterr[np.isnan(staterr)] = np.array(df[\"error\"])[np.isnan(staterr)]\n",
-    "# replace zero staterr with smallest nonzero staterr\n",
-    "\n",
-    "# see https://pdg.lbl.gov/encoder_listings/s035.pdf, S035C19 LEE, 0.003% star. error * 8.42\n",
-    "staterr[(staterr == 0) & np.array(df[\"pdgid\"] == \"S035C19\")] = 0.0002526\n",
-    "\n",
-    "# staterr[staterr == 0] = np.min(staterr[staterr > 0])/2\n",
-    "df[\"staterr\"] = staterr\n",
-    "\n",
-    "\n",
-    "df[\"std_resid\"] = (df[\"measurement\"] - df[\"avg\"]) / df[\"error\"]\n",
-    "# only keep rows where there are at least 3 measurements\n",
-    "df = df.groupby(\"pdgid\").filter(lambda x: len(x) >= 3)\n",
-    "\n",
-    "df[\"value\"] = df[\"measurement\"]\n",
-    "# to_drop = ['measurement', 'error_positive', 'error_negative', 'stat_error_positive', 'stat_error_negative']\n",
-    "# df = df.drop(columns=to_drop)\n",
-    "\n",
-    "print(\"Number of properties:\", len(df[\"pdgid\"].unique()))\n",
-    "print(\"Number of measurements:\", len(df))\n",
-    "\n",
-    "pdg2025_stat = df.copy()\n",
-    "pdg2025_stat[\"uncertainty\"] = pdg2025_stat[\"staterr\"]\n",
-    "del pdg2025_stat[\"staterr\"], pdg2025_stat[\"error\"]\n",
-    "df_gb = pdg2025_stat.groupby(\"pdgid\", group_keys=False)\n",
-    "pdg2025_stat_dfs = [df_gb.get_group(x).copy() for x in df_gb.groups]\n",
-    "\n",
-    "pdg2025_both = df.copy()\n",
-    "pdg2025_both[\"uncertainty\"] = pdg2025_both[\"error\"]\n",
-    "del pdg2025_both[\"staterr\"], pdg2025_both[\"error\"]\n",
-    "df_gb = pdg2025_both.groupby(\"pdgid\", group_keys=False)\n",
-    "pdg2025_both_dfs = [df_gb.get_group(x).copy() for x in df_gb.groups]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pdg2025bad = [\n",
-    "    \"M047R7\",\n",
-    "    \"M002R19\",\n",
-    "    \"M049R52\",\n",
-    "    \"M055R6\",\n",
-    "    \"M053R02\",\n",
-    "    \"M052R4\",\n",
-    "    \"M056R4\",\n",
-    "    \"M057R4\",\n",
-    "    \"M070R24\",\n",
-    "    \"M070R50\",\n",
-    "    \"M070R60\",\n",
-    "    \"M070R7\",\n",
-    "    \"M070R82\",\n",
-    "    \"M070R83\",\n",
-    "    \"M070R84\",\n",
-    "    \"M070R86\",\n",
-    "    \"M070R87\",\n",
-    "    \"M070R9\",\n",
-    "    \"M070S6\",\n",
-    "    \"M071R22\",\n",
-    "    \"M071R28\",\n",
-    "    \"M071S10\",\n",
-    "    \"S040R11\",\n",
-    "    \"S041B24\",\n",
-    "    \"S041B41\",\n",
-    "    \"S041C5\",\n",
-    "    \"S041R3\",\n",
-    "    \"S041R39\",\n",
-    "    \"S041R90\",\n",
-    "    \"S041S47\",\n",
-    "    \"S041R65\",\n",
-    "    \"S041S50\",\n",
-    "    \"S041T03\",\n",
-    "    \"S042B26\",\n",
-    "    \"S042B27\",\n",
-    "    \"S042B43\",\n",
-    "    \"S042B47\",\n",
-    "    \"S042B58\",\n",
-    "    \"S042P59\",\n",
-    "    \"S042R2\",\n",
-    "    \"S042R20\",\n",
-    "    \"S042R22\",\n",
-    "    \"S042R23\",\n",
-    "    \"S042R3\",\n",
-    "    \"S042R47\",\n",
-    "    \"S042R48\",\n",
-    "    \"S042S24\",\n",
-    "    \"S042S59\",\n",
-    "    \"S049R21\",\n",
-    "    \"S049S7\",\n",
-    "    \"S049R24\",\n",
-    "    \"S042S88\",\n",
-    "    \"S086R3\",\n",
-    "    \"S086R33\",\n",
-    "    \"S086R32\",\n",
-    "    \"S086R8\",\n",
-    "    \"S086R34\",\n",
-    "    \"S086R6\",\n",
-    "]\n",
-    "\n",
-    "pdg2025_stat_dfs = [\n",
-    "    df for df in pdg2025_stat_dfs if df[\"pdgid\"].iloc[0] not in pdg2025bad\n",
-    "]\n",
-    "pdg2025_both_dfs = [\n",
-    "    df for df in pdg2025_both_dfs if df[\"pdgid\"].iloc[0] not in pdg2025bad\n",
-    "]\n",
-    "pdg2025_stat_quantities = [df[\"pdgid\"].iloc[0] for df in pdg2025_stat_dfs]\n",
-    "pdg2025_both_quantities = [df[\"pdgid\"].iloc[0] for df in pdg2025_both_dfs]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.argmin(df[\"stat_error_negative\"])\n",
-    "df.iloc[317, :]"
+    "pdg2025_both_dfs[np.argmax([np.max(df.uncertainty)/np.min(df.uncertainty) for df in pdg2025_both_dfs])]"
    ]
   },
   {
@@ -256,6 +131,9 @@
     "bailey_medical_dfs, bailey_medical_files = dfs_from_folder(\n",
     "    \"data/bailey/CsvData/Medical_Data\"\n",
     ")\n",
+    "cochrane_dich_dfs, cochrane_dich_files = dfs_from_folder(\n",
+    "    \"data/cochrane/dich\"\n",
+    ")\n",
     "\n",
     "datasets = {\n",
     "    \"pdg2025-stat\": pdg2025_stat_dfs,\n",
@@ -272,6 +150,7 @@
     "    \"manylabs2\": manylabs2_dfs,\n",
     "    \"baker-medical\": baker_medical_dfs,\n",
     "    \"bailey-medical\": bailey_medical_dfs,\n",
+    "    \"cochrane-dich\": cochrane_dich_dfs,\n",
     "    \"bailey-constants\": bailey_constants_dfs,\n",
     "}\n",
     "quantities = {\n",
@@ -289,6 +168,7 @@
     "    \"manylabs2\": manylabs2_files,\n",
     "    \"baker-medical\": baker_medical_files,\n",
     "    \"bailey-medical\": bailey_medical_files,\n",
+    "    \"cochrane-dich\": cochrane_dich_files,\n",
     "    \"bailey-constants\": bailey_constants_files,\n",
     "}\n",
     "nice_names = {\n",
@@ -306,6 +186,7 @@
     "    \"manylabs2\": \"Many Labs 2\",\n",
     "    \"baker-medical\": \"Baker 2013: medical\",\n",
     "    \"bailey-medical\": \"Bailey 2017: medical\",\n",
+    "    \"cochrane-dich\": \"CDSR: dichotomous\",\n",
     "    \"bailey-constants\": \"Bailey 2017: constants\",\n",
     "}\n",
     "nice_names_break = {\n",
@@ -323,6 +204,7 @@
     "    \"manylabs2\": \"Many Labs 2\",\n",
     "    \"baker-medical\": \"Baker 2013\\nmedical\",\n",
     "    \"bailey-medical\": \"Bailey 2017\\nmedical\",\n",
+    "    \"cochrane-dich\": \"CDSR: dichotomous\",\n",
     "    \"bailey-constants\": \"Bailey 2017\\nconstants\",\n",
     "}"
    ]
@@ -553,11 +435,46 @@
    "outputs": [],
    "source": [
     "synthetic_dfs = []\n",
-    "for df in datasets[\"pdg2025-both\"]:\n",
+    "for df in list(datasets[\"pdg2025-both\"])*20:\n",
     "    sigmas = np.array(df[\"uncertainty\"])\n",
-    "    tau = np.median(sigmas)\n",
+    "    tau = np.median(sigmas)*0.5\n",
     "    values = norm.rvs(loc=0, scale=np.sqrt(sigmas**2 + tau**2))\n",
-    "    synthetic_dfs.append(pd.DataFrame({\"value\": values, \"uncertainty\": sigmas}))"
+    "    synthetic_dfs.append(pd.DataFrame({\"value\": values, \"uncertainty\": sigmas}))\n",
+    "synthetic_truths = np.zeros(len(synthetic_dfs))\n",
+    "\n",
+    "output1 = measurement_dist(datasets['pdg2025-both'])\n",
+    "output2 = measurement_dist(synthetic_dfs, thetas=synthetic_truths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(4, 2))\n",
+    "zspace = output1['zspace']\n",
+    "colors = ['blue', 'orange', 'green', 'red']\n",
+    "for i in range(2):\n",
+    "    linestyle = ['-', '--'][i]\n",
+    "    output = [output1, output2][i]\n",
+    "    for j in range(4):\n",
+    "        which = ['pair', 'h', 'hprime', 'hstar'][j]\n",
+    "        label = [r'$z_{ij}$', r'$h_i$', r'$h_i^\\prime$', r'$h^\\star$'][j]\n",
+    "        if which not in output:\n",
+    "            continue\n",
+    "        probs = np.array(output[which])\n",
+    "        plt.plot(zspace[probs > 0], probs[probs > 0], linestyle=linestyle, color=colors[j], label=label)\n",
+    "    if i == 0:\n",
+    "        plt.plot(zspace, output['norm'], color='black', label=r'$|\\mathcal{N}(0,1)|$')\n",
+    "    plt.legend(frameon=False)\n",
+    "plt.ylim(1e-4, 1)\n",
+    "plt.xlim(0, 10)\n",
+    "plt.yscale('log')\n",
+    "plt.xlabel(r'$z$')\n",
+    "plt.ylabel(r'$P(Z>z)$')\n",
+    "plt.legend(frameon=False, ncol=2)\n",
+    "plt.savefig('figs/measurement_dist_synth.pdf', bbox_inches='tight')"
    ]
   },
   {
@@ -575,18 +492,19 @@
     "    gridspec_kw={\"hspace\": 0, \"wspace\": 0},\n",
     ")\n",
     "from tqdm import tqdm\n",
-    "from measurement_dist import measurement_dist\n",
     "import json\n",
     "\n",
     "LIMIT = -1  # TODO SET TO -1\n",
     "for i, (name, dfs) in tqdm(\n",
     "    enumerate((datasets).items())\n",
     "):  # | {'synthetic': synthetic_dfs}).items():\n",
+    "    print(name)\n",
     "    if name == \"pdg1970\":\n",
     "        continue\n",
     "    ax = axs.flatten()[i]\n",
     "\n",
     "    output = measurement_dist(dfs, lists=True)\n",
+    "    zspace = np.array(output['zspace'])\n",
     "    output[\"name\"] = nice_names_break[name]\n",
     "\n",
     "    # save results for use in measurement_dist.py\n",
@@ -616,6 +534,15 @@
     "plt.tight_layout()\n",
     "plt.savefig(\"figs/noground_resids.pdf\", bbox_inches=\"tight\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zspace[probs>0]"
    ]
   },
   {
@@ -1090,7 +1017,7 @@
     "    # # add median\n",
     "    # print(medians)\n",
     "    sns.stripplot(\n",
-    "        data=data, ax=axs[i], orient=\"h\", size=1.5, jitter=0.3, color=\"black\", alpha=0.4\n",
+    "        data=data, ax=axs[i], orient=\"h\", size=1.3, jitter=0.32, color=\"black\", alpha=0.3\n",
     "    )\n",
     "\n",
     "    medians = [np.median(data[name]) for name in data.keys()]\n",
@@ -1109,8 +1036,8 @@
     "\n",
     "axs[0].set_xlabel(\"Number of results\")\n",
     "axs[0].set_xscale(\"log\")\n",
-    "axs[1].set_xlabel(\"$I^2$\")\n",
-    "axs[2].set_xlabel(\"$\\sigma_{\\mathrm{max}}/\\sigma_{\\mathrm{min}}$\")\n",
+    "axs[1].set_xlabel(r\"$I^2$\")\n",
+    "axs[2].set_xlabel(r\"$\\sigma_{\\mathrm{max}}/\\sigma_{\\mathrm{min}}$\")\n",
     "\n",
     "# add y ticks\n",
     "axs[0].set_yticks(np.array(range(len(datasets))))\n",
@@ -1305,11 +1232,13 @@
     "        -np.ones(len(diff)) * i,\n",
     "        marker=\"|\",\n",
     "        s=20,\n",
-    "        vmin=0,\n",
-    "        vmax=maxn,\n",
+    "        vmin=np.log(2),\n",
+    "        vmax=np.log(maxn),\n",
+    "        # vmax=1,\n",
     "        facecolor=\"none\",\n",
     "        linewidths=0.4,\n",
-    "        c=\"black\",\n",
+    "        # c=np.log(ns[name]),\n",
+    "        c='black',\n",
     "        alpha=0.5,\n",
     "    )\n",
     "    plt.axhline(-i, color=\"grey\", linewidth=0.3, linestyle=\":\")\n",
