--- a/references.bib
+++ b/references.bib
@@ -672,6 +672,79 @@ url={https://pdg.lbl.gov/2011/listings/rpp2011-list-t-quark.pdf}
   doi={10.1111/j.1539-6924.1994.tb00262.x}
 }
 
+@article{langan2017comparative,
+  title={Comparative performance of heterogeneity variance estimators in meta-analysis: a review of simulation studies},
+  author={Langan, Dean and Higgins, Julian PT and Simmonds, Mark},
+  journal={Research synthesis methods},
+  volume={8},
+  number={2},
+  pages={181--198},
+  year={2017},
+  publisher={Wiley Online Library},
+  doi={10.1002/jrsm.1198}
+}
+
+@article{borm2009evidence,
+  title={The evidence provided by a single trial is less reliable than its statistical analysis suggests},
+  author={Borm, George F and Lemmers, Oscar and Fransen, Jaap and Donders, Rogier},
+  journal={Journal of Clinical Epidemiology},
+  volume={62},
+  number={7},
+  pages={711--715},
+  year={2009},
+  publisher={Elsevier},
+  doi={10.1016/j.jclinepi.2008.09.013}
+}
+
+@article{rush1955speed,
+ ISSN = {00368733, 19467087},
+ URL = {http://www.jstor.org/stable/24944729},
+ author = {J. H. Rush},
+ journal = {Scientific American},
+ number = {2},
+ pages = {62--67},
+ publisher = {Scientific American, a division of Nature America, Inc.},
+ title = {The Speed of Light},
+ urldate = {2025-09-24},
+ volume = {193},
+ year = {1955}
+}
+
+@article{bravin1998influence,
+  title={The influence of train leakage currents on the LEP dipole field},
+  author={Bravin, Enrico and Brun, G and Dehning, B and Drees, A and Galbraith, P and Geitz, M and Henrichsen, K and Koratzinos, M and Mugnai, G and Tonutti, M},
+  journal={Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+  volume={417},
+  number={1},
+  pages={9--15},
+  year={1998},
+  publisher={Elsevier}
+}
+
+@article{ioannidis2005most,
+  title={Why most published research findings are false},
+  author={Ioannidis, John PA},
+  journal={PLoS medicine},
+  volume={2},
+  number={8},
+  pages={e124},
+  year={2005},
+  publisher={Public Library of Science}
+}
+
+@article{ioannidis2001evolution,
+  title={Evolution of treatment effects over time: empirical insight from recursive cumulative metaanalyses},
+  author={Ioannidis, John PA and Lau, Joseph},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={98},
+  number={3},
+  pages={831--836},
+  year={2001},
+  publisher={The National Academy of Sciences}
+}
+
+
+
 
 
 ###########################
