--- a/sim_results.ipynb
+++ b/sim_results.ipynb
@@ -54,6 +54,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from scipy.stats import expon\n",
+    "sigmas = np.random.exponential(0.2, size=(1000,15))\n",
+    "print(np.mean(sigmas))\n",
+    "maxovermin = np.max(sigmas, axis=1)/np.min(sigmas, axis=1)\n",
+    "plt.hist(maxovermin, density=True, bins=np.linspace(0,300,20), color='black')\n",
+    "# plt.xlim(0, 1000)\n",
+    "plt.axvline(np.median(maxovermin), color='red')\n",
+    "print(np.median(maxovermin))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "nice_names = {\n",
     "    \"binom\": \"ST\",\n",
     "    \"binom-corr\": r\"ST$_{\\rho=0.1}$\",\n",
@@ -72,7 +98,16 @@
     "    \"re_pm\": r\"RE$_{\\rm{PM}}$\",\n",
     "}\n",
     "\n",
-    "setting = \"re-outliers_unif\"\n",
+    "setting = \"fe-corr_unif\"\n",
+    "xaxis = 'rho'\n",
+    "xaxis_grid = {\n",
+    "    'tau': TAUS,\n",
+    "    'rho': RHOS,\n",
+    "}[xaxis]\n",
+    "xaxis_label = {\n",
+    "    'tau': r\"$\\tau$\",\n",
+    "    'rho': r\"$\\rho$\",\n",
+    "}[xaxis]\n",
     "# NS = [3, 6, 10, 15]\n",
     "# TAUS = [0.1, 1.0, 10.0]\n",
     "\n",
@@ -88,48 +123,39 @@
     "for i, method in enumerate(METHODS):\n",
     "    ax = axs.flatten()[i]\n",
     "    ax.tick_params(direction=\"in\", top=True, right=True)\n",
-    "    ax.set_xticks(np.arange(len(TAUS)))\n",
+    "    ax.set_xticks(np.arange(len(xaxis_grid)))\n",
     "    ax.set_yticks(np.arange(len(NS)))\n",
     "    ax.set_title(nice_names[method], pad=2)\n",
     "    ax.set_yticklabels([str(n) for n in NS])\n",
-    "    ax.set_xticklabels([str(t) for t in TAUS])\n",
+    "    ax.set_xticklabels([str(x) for x in xaxis_grid])\n",
     "\n",
     "    # set xlabel if on bottom row, ylabel if in first column\n",
     "    if i >= len(METHODS) - ncol:\n",
-    "        ax.set_xlabel(r\"$\\tau$\")\n",
+    "        ax.set_xlabel(xaxis_label)\n",
     "    if i % ncol == 0:\n",
     "        ax.set_ylabel(r\"$n$\")\n",
     "    #\n",
-    "    img = np.full((len(NS), len(TAUS)), np.nan)\n",
+    "    img = np.full((len(NS), len(xaxis_grid)), np.nan)\n",
     "    for j, n in enumerate(NS):\n",
-    "        for k, tau in enumerate(TAUS):\n",
-    "            key = f\"{setting}_n={n}_tau={tau}\"\n",
+    "        for k, x in enumerate(xaxis_grid):\n",
+    "            key = f\"{setting}_n={n}_{xaxis}={x}\"\n",
     "            if key in results and method in results[key]:\n",
     "                # print(results[key][method]['coverage'])\n",
     "                img[j, k] = (\n",
     "                    results[key][method][\"coverage\"]\n",
     "                    - results[key][method][\"nominal_cov\"]\n",
     "                )\n",
-    "    sc = ax.imshow(img, cmap=\"bwr_r\", vmin=-0.4, vmax=0.4)\n",
+    "    sc = ax.imshow(img, cmap=\"bwr_r\", vmin=-0.4, vmax=0.4, aspect='auto')\n",
     "    print(method, np.mean(img))\n",
     "\n",
-    "    ax.set_aspect(0.6)\n",
+    "    # ax.set_aspect(0.6)\n",
     "    # ax.set_xlabel('tau')\n",
-    "for ax in axs.flatten()[len(METHODS) :]:\n",
+    "for ax in axs.flatten()[len(METHODS):]:\n",
     "    ax.set_visible(False)\n",
     "cbar_ax = fig.add_axes([0.92, 0.15, 0.02, 0.7])\n",
     "fig.colorbar(sc, cax=cbar_ax, label=r\"Achieved coverage $-$ Target coverage\")\n",
     "# plt.tight_layout()\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results[\"re-outliers\"]"
    ]
   }
  ],
